# pnn_library

./: .gitignore  pyproject.toml  pytest.ini
pnn_library/modules/: activations.py  extinction_rate.py  fir_filter.py  pdevices.py
pnn_library/modules/layer/: soton_layer.py
pnn_library/noise/: gaussian_noise.py
pnn_library/quantize/v2/: __init__.py
pnn_library/utils/: compose.py
tests/modules/: test_pdevices.py
tests/quantize/: test_layer_quant.py
